--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #4b145b;
+  color: #fff;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.container{
+  background-color: #fff;
+  padding: 20px;
+  color: #333;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  width: 70%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header{
+  width: 20%;
+}
+.accordions{
+  width: 70%;
+}
+.accordion-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.btn {
+	width: 2rem;
+	height: 2rem;
+	background: #eae6eb;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	color: #b4345c;
+	cursor: pointer;
+	margin-left: 1rem;
+	align-self: center;
+  border: none;
 }
