--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   width: 70%;
 }
 .header{
-  width: 20%;
+  width: 26%;
 }
 .accordions{
   width: 70%;
@@ -42,4 +42,19 @@
 	margin-left: 1rem;
 	align-self: center;
   border: none;
+}
+.accordion {
+  box-shadow: 0 0 12px 0 rgb(0 0 0 / 20%);
+  padding: 2px 20px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+
+@media (max-width: 992px) {
+  .container{
+    flex-direction: column !important;
+  }
+  .header,.accordions{
+    width: 100% !important;
+  }
 }
